objects/tffa__PartyRelationCode__c.object
<CustomObject>
    <description>Defines possible relationships that can be captured between parties in the system. The relationship that can be captured is dependent on the participating parties (partyType and relatedPartyType) as well as the nature of the relationship (category e.g. PERSONAL, BUSINESS). Note: The code represents how party of type RelatedPartyType is related to party of type PartyType.</description>
    <fields>
        <fullName>tffa__Category__c</fullName>
        <description>Defines the nature of the relationship captured by the code. PERSONAL capturing personal relationships between individuals. BUSINESS capturing business relationships between parties.</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRelationCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A short description about the code and the type of relationship it captures.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes the party relation code unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>The display text for the code. This is what gets displayed on any consuming UI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationType__c</fullName>
        <description>Allowed organization type(s) for party (an organization) managing the relationship. Supports multiple values.</description>
        <label>Organization Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <description>Allowed type for party managing the relationship.</description>
        <label>Party type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>tffa__Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RelatedPartyType__c</fullName>
        <description>Allowed type for related party in the relationship.</description>
        <label>Related party type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>tffa__Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>99</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>The value of the code, that gets stamped on the party to party relationship. This is unique for a code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Party Relation Code</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Category__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Relation Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>